attempt to fix white gap in dark mode

--- a/app/src/styles/_pages.scss
+++ b/app/src/styles/_pages.scss
@@ -98,6 +98,7 @@
 .ocp-page-heading {
   font-size: 1.75rem;
   font-weight: 700;
+  margin-block-start: 1.5rem;
   margin-block-end: 0.5rem;
 }
 
